# sorm

./: Cargo.toml  README.md
sorm-macros/: Cargo.toml
sorm-macros/src/: attr.rs  clause.rs  lib.rs
sorm-tests/: Cargo.toml
sorm-tests/src/: lib.rs  model.rs  query.rs
src/: error.rs  lib.rs  model.rs  query.rs
