[package]
name = "sorm-macros"
version = "0.1.2"
edition = "2021"
description = "Simple ORM (Object-Relational Mapping) built on SQLx"
license = "MIT"
repository = "https://github.com/luoshuqi/sorm"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }