[package]
name = "sorm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = "0.3.30"
futures-util = "0.3.30"
serde = "1.0.203"
serde_json = "1.0.117"
sorm = { path = "../../sorm", features = ["test"]}
sqlx = { version = "0.7.4", features = ["runtime-tokio"] }

[features]
default = ["sqlite"]
sqlite = ["sorm/sqlite"]
postgres = ["sorm/postgres"]
mysql = ["sorm/mysql"]
